Update: fixes #5 - single blog spacing

--- a/custom/themes/ecoman/src/sass/base/_typography.scss
+++ b/custom/themes/ecoman/src/sass/base/_typography.scss
@@ -667,6 +667,7 @@ span.inline-tweet {
 	border-bottom: 1px dashed $l-blue;
 	i {
 		color: $l-blue;
+		padding-left: 5px;
 	}
 }
 
