--- a/custom/themes/ecoman/src/sass/layout/_main.scss
+++ b/custom/themes/ecoman/src/sass/layout/_main.scss
@@ -28,6 +28,14 @@ span.text-disappear {
     }
 }
 
+.main-content.single {
+	@include media($bp-large) {
+    	margin: 50px 0;
+		@include span-columns(10);
+		@include shift(1);
+    }
+}
+
 .main-content--narrow {
     @include media($bp-med) {
 		@include span-columns(6);
@@ -37,8 +45,8 @@ span.text-disappear {
 .main-content--narrow.blog {
 	padding: 15px 20px;
     @include media($bp-med) {
-		@include span-columns(6);
-		@include shift(3);
+		@include span-columns(8);
+		@include shift(2);
 		padding: 0;
     }
     @include media($bp-ls-small) {
